public/style.css
/*
 * Common
 */

body {
  text-align: center;
  background: black;
  color: white;
}

h1 {
  font-family: Dosis, sans-serif;
  text-transform: uppercase;
  font-weight: 600;
  margin-bottom: 0px;
}

.home > p {
  font-family: Dosis, sans-serif;
  margin-bottom: 40px;
}

.entry-box {
  color: black;
  background: rgb(249, 249, 249);
  padding: 5px;
  font-family: Dosis, sans-serif;
}

.entry-box p {
  font-size: 18px;
}

.entry-box strong {
  font-weight: 700;
}

.entry-box .title {
  font-weight: 500;
  text-transform: uppercase;
  margin-bottom: 0px;
}

.title a, .title a:visited, .title a:hover {
  color: black;
}


/*
 * Home
 */

.home {
  max-width: 600px;
  margin: 0 auto;
}

.home ul {
  padding-left: 0;
  list-style-type: none;
  color: black;
} 

.home ul li {
  margin-bottom: 20px;
}


/*
 * Entry page
 */

.entry a, .entry a:visited, .entry a:hover {
  color: white;
}

.entry .description {
  max-width: 600px;
  margin: 0 auto;
}

